<resources>
    <string name="app_name">Lab1UI</string>
    <string name="send">Show</string>
    <string name="firstName">First Name*</string>
    <string name="lastName">Last Name*</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="country">Country*</string>
    <string name="phone">Phone*</string>
    <string name="address">Address</string>
    <string name="email">Email*</string>
    <string name="hobbies">Hobbies</string>
    <string name="favorite">Favorite</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="action_settings">Settings</string>
    <string name="error_message">Fields with * are required</string>


    <!-- Hobbies Adapter  -->
    <string-array name="hobbies_array">
        <item>Play videogames</item>
        <item>Listen to music</item>
        <item>Go to the cinema</item>
        <item>Ride on bicycle</item>
        <item>Dance</item>
        <item>Go out with my friends</item>
        <item>Read books</item>
        <item>Learning other languages</item>
    </string-array>

</resources>
